--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Indian Kitchens</title>
+    <link rel="icon" href="./images/food_icon.png" title="food icons"> 
 </head>
 <body>
     <h1>Indian Kitchen</h1>
@@ -13,6 +14,35 @@
     <a href="menu.html">Menu</a>
     <a href="https://www.swiggy.com/" target="_blank">order online</a>
     <br><br>
+
+    <!-- img tag is empty or self closing tag 
+        title is when we hover it,it will show the title-->
+    <!-- figure tag is newly introduced by html5 to put img tag 
+        inside the figure tag -->
+    <figure>
+        <img src="./images/foodlogo.webp" alt="Food Logo" title="Signature Dosa">
+        <br>
+        <figcaption>Varietie's of Tiffin's</figcaption>
+    </figure>
+
+    <h3>Snacks Time.! <img src="./images/snacks.png" alt="Vada Logo" width="50px" height="20px"></h3>
+
+    <!-- align -->
+    <p><img src="./images/muruku.webp" alt="Muruku Logo" width="100px" height="100px" align="left"> Well, snack time is definitely something we all look forward to. <br>
+        There's nothing quite like the joy of munching on crispy, spicy, cheesy and flavourful treats, 
+        and if these dishes are home-made, it's all the more better. 
+   </p>
+   <p>
+    Indians love their savory treats, and almost every household has their own specialties that they prepare for festivals or special occasions. <br>
+    I love making cashew-studded pakoras—they have to be eaten as soon as they're done, <br>
+    indecently hot with steam rising as you break them into bite-sized pieces.
+   </p>
+    
+    <p><img src="./images/paniyaram.webp" alt="Paniyaram Logo" width="100px" height="100px" align="left">
+        I also love my mother's golden paniyarams, served with fresh coconut chutney or hot sambar for dunking. <br>
+        But for those who would rather eat than cook, <br> sweet shops and restaurants all across South India consistently serve a variety of savory options.
+    </p>    
+    <br> <br>
 
     <!-- it goes to that particular section of menu instead of
          going menu again -->
